# HW_2_10

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
hw10/: settings.py
hw10/hw10/: settings.py  urls.py
hw10/quotes/: urls.py  utils.py  views.py
hw10/quotes/static/quotes/: style.css
hw10/quotes/templates/quotes/: base.html  index.html
hw10/utils/: migration.py
quotes/: models.py  urls.py  views.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  authors.html  base.html  index.html
utils/: add_quotes_to_mongo.py  migration.py
